@@ -73,6 +73,11 @@
 ** Typ: Farbe
 ** Werte: a WeeChat color name (default, black, (dark)gray, white, (light)red, (light)green, brown, yellow, (light)blue, (light)magenta, (light)cyan), a terminal color number or an alias; attributes are allowed before color (for text color only, not background): "*" for bold, "%" for reverse, "_" for underline (Standardwert: `default`)
 
+* *irc.look.color_nicks_in_nicklist*
+** Beschreibung: `use nick color in nicklist`
+** Typ: boolesch
+** Werte: on, off (Standardwert: `off`)
+
 * *irc.look.color_nicks_in_server_messages*
 ** Beschreibung: `Nutze Nick-Farbe bei Nachrichten vom Server`
 ** Typ: boolesch
