@@ -73,6 +73,11 @@
 ** type: color
 ** values: a WeeChat color name (default, black, (dark)gray, white, (light)red, (light)green, brown, yellow, (light)blue, (light)magenta, (light)cyan), a terminal color number or an alias; attributes are allowed before color (for text color only, not background): "*" for bold, "%" for reverse, "_" for underline (default value: `default`)
 
+* *irc.look.color_nicks_in_nicklist*
+** description: `use nick color in nicklist`
+** type: boolean
+** values: on, off (default value: `off`)
+
 * *irc.look.color_nicks_in_server_messages*
 ** description: `use nick color in messages from server`
 ** type: boolean
