@@ -73,6 +73,11 @@
 ** type: couleur
 ** valeurs: un nom de couleur WeeChat (default, black, (dark)gray, white, (light)red, (light)green, brown, yellow, (light)blue, (light)magenta, (light)cyan), un numéro de couleur du terminal ou un alias; des attributs sont autorisés avant la couleur (seulement pour la couleur du texte, pas le fond) : "*" pour du gras, "%" pour la vidéo inverse, "_" pour du souligné (valeur par défaut: `default`)
 
+* *irc.look.color_nicks_in_nicklist*
+** description: `utiliser la couleur du pseudo dans la liste des pseudos`
+** type: booléen
+** valeurs: on, off (valeur par défaut: `off`)
+
 * *irc.look.color_nicks_in_server_messages*
 ** description: `utiliser la couleur du pseudo dans les messages du serveur`
 ** type: booléen
