@@ -411,6 +411,54 @@ irc_nick_get_prefix_color (struct t_irc_server *server,
 }
 
 /*
+ * irc_nick_get_prefix_color_name: return name of color with a prefix number
+ */
+
+const char *
+irc_nick_get_prefix_color_name (int prefix_color)
+{
+    static char *color_for_prefix[] = {
+        "chat",
+        "irc.color.nick_prefix_op",
+        "irc.color.nick_prefix_halfop",
+        "irc.color.nick_prefix_voice",
+        "irc.color.nick_prefix_user",
+    };
+    
+    if ((prefix_color >= 0) && (prefix_color <= 4))
+        return color_for_prefix[prefix_color];
+    
+    /* no color by default (should not happen) */
+    return color_for_prefix[0];
+}
+
+/*
+ * irc_nick_get_color_for_nicklist: get nick color for nicklist
+ */
+
+const char *
+irc_nick_get_color_for_nicklist (struct t_irc_server *server,
+                                 struct t_irc_nick *nick)
+{
+    static char *nick_color_bar_fg = "bar_fg";
+    static char *nick_color_self = "weechat.color.chat_nick_self";
+    static char *nick_color_away = "weechat.color.nicklist_away";
+    
+    if (nick->away)
+        return nick_color_away;
+    
+    if (weechat_config_boolean(irc_config_look_color_nicks_in_nicklist))
+    {
+        if (weechat_strcasecmp (nick->name, server->nick) == 0)
+            return nick_color_self;
+        else
+            return irc_nick_find_color_name (nick->name);
+    }
+    
+    return nick_color_bar_fg;
+}
+
+/*
  * irc_nick_nicklist_add: add nick to buffer nicklist
  */
 
@@ -421,13 +469,12 @@ irc_nick_nicklist_add (struct t_irc_server *server,
 {
     int prefix_color;
     struct t_gui_nick_group *ptr_group;
-
+    
     ptr_group = irc_nick_get_nicklist_group (server, channel->buffer, nick);
     prefix_color = irc_nick_get_prefix_color (server, nick);
     weechat_nicklist_add_nick (channel->buffer, ptr_group,
                                nick->name,
-                               (nick->away) ?
-                               "weechat.color.nicklist_away" : "bar_fg",
+                               irc_nick_get_color_for_nicklist (server, nick),
                                nick->prefix,
                                irc_nick_get_prefix_color_name (prefix_color),
                                1);
@@ -467,28 +514,6 @@ irc_nick_nicklist_set (struct t_irc_channel *channel,
     {
         weechat_nicklist_nick_set (channel->buffer, ptr_nick, property, value);
     }
-}
-
-/*
- * irc_nick_get_prefix_color_name: return name of color with a prefix number
- */
-
-const char *
-irc_nick_get_prefix_color_name (int prefix_color)
-{
-    static char *color_for_prefix[] = {
-        "chat",
-        "irc.color.nick_prefix_op",
-        "irc.color.nick_prefix_halfop",
-        "irc.color.nick_prefix_voice",
-        "irc.color.nick_prefix_user",
-    };
-    
-    if ((prefix_color >= 0) && (prefix_color <= 4))
-        return color_for_prefix[prefix_color];
-    
-    /* no color by default (should not happen) */
-    return color_for_prefix[0];
 }
 
 /*
@@ -769,8 +794,7 @@ irc_nick_set_away (struct t_irc_server *server, struct t_irc_channel *channel,
         {
             nick->away = is_away;
             irc_nick_nicklist_set (channel, nick, "color",
-                                   (nick->away) ?
-                                   "weechat.color.nicklist_away" : "bar_fg");
+                                   irc_nick_get_color_for_nicklist (server, nick));
         }
     }
 }
